resources/05_service_mesh_cluster01/base/04-spring-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-gateway
  namespace: spring-app
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-app
spec:
  hosts:
  - '*'
  gateways:
  - spring-gateway
  http:
  - route:
    - destination:
        host: spring-app
        port:
          number: 8080
